# python-template

./: .editorconfig  README.md  cookiecutter.json
hooks/: pre-gen-project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: test.yaml
{{cookiecutter.project_name}}/tests/: test_main.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: test.yaml  test_deploy.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.repo_name}}/: .flake8  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: deploy.yaml  deploy_docs.yaml  test.yaml  test_deploy.yaml
