[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
readme = "README.md"
documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.repo_name}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}"
license = "MIT"
keywords = ["Python", "Poetry"]
packages = [
    { include = "{{cookiecutter.package_name}}" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2"
pre-commit = ">=3.1.1"
pdoc = ">=0.10.0"
black = ">=23.1.0"
ruff = ">=0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = ["template_demo/__init__.py"]

[tool.ruff.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pandas related
    "PD",
]
extend-ignore = ["D203", "D213"]

[too.ruff.lint.pydocstyle]
convetion = "numpy"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

