[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
dynamic = ["version"]
description = "{{cookiecutter.short_description}}"
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
readme = "README.md"
license = { text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26.4"
]

[project.scripts]
{{cookiecutter.package_name}} = "{{cookiecutter.package_name}}.main:main"


[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "pdoc",
    "jupyter",
    "ruff",
]

[tool.ruff]
line-length = 88
extend-exclude = ["src/{{cookiecutter.package_name}}/__init__.py"]
extend-include = ["*.ipynb"]
target-version = "py310"

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pandas related
    "PD",
]
extend-ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools_scm]
