[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = "{{cookiecutter.short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
readme = "README.md"
documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.repo_name}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}"
license = "MIT"
keywords = ["Python", "Poetry"]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2"
black = ">=23.1.0"
isort = ">=5.12.0"
pre-commit = ">=3.1.1"
pdoc3 = ">=0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
